--- a/RestaurantAPI/appsettings.json
+++ b/RestaurantAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Authentication": {
-    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE_PRIVATE_KEY_DONT_SHARE",
     "JwtExpireDays": 15,
     "JwtIssuer":  "http://restaurantapi.com"
   },
