Add automatic migrate of database

--- a/RestaurantAPI/appsettings.Development.json
+++ b/RestaurantAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RestaurantDbConnection": "Server=DESKTOP-PGNQOR2\\SQLEXPRESS;Database=RestaurantDb;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
