--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,8 @@ on:
     branches:
       - master-pipeline
   workflow_dispatch:
-
-  jobs:
+  
+  fork:
     build:
       runs-on: ubuntu-latest
       steps:
