--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: deploy
 on:
   push:
-    branches: [ master ]
+    branches: [ master-pop ]
   
 jobs:
   build:
@@ -18,10 +18,32 @@ jobs:
         run: dotnet build --no-restore
       - name: Publish
         run: dotnet publish ./RestaurantApi/RestaurantAPI.csproj -c Release -o ${{ env.DOTNET_ROOT }}/api
+      - name: upload artifact
+        uses: actions/upload-artifact@v3.2.1-node20
+        with:
+          name: api-artifact
+          path: ${{ env.DOTNET_ROOT }}/api
 
         
   deploy-dev:
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: 'Dev'
+      url: ${{ steps.deply-to-azure.outputs.webapp-url }}
     steps:
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v4.1.8
+      with:
+        name: api-artifact
+    - name: Azure WebApp deploy
+      id: deply-to-azure
+      uses: Azure/webapps-deploy@v2
+      with:
+        app-name: 'restaurantapi-dev'
+        publish-profile: ${{ secrets.PUBLISH_PROFILE_DEV }}
+        
+    
+   
+      
 
