--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,24 @@ jobs:
       with:
         app-name: 'restaurantapi-dev'
         publish-profile: ${{ secrets.PUBLISH_PROFILE_DEV }}
-        
+
+  deploy-prod:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Prod'
+      url: ${{ steps.deply-to-azure.outputs.webapp-url }}
+    steps:
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v4.1.8
+      with:
+        name: api-artifact
+    - name: Azure WebApp deploy
+      id: deply-to-azure
+      uses: Azure/webapps-deploy@v2
+      with:
+        app-name: 'restaurantapi-prod'
+        publish-profile: ${{ secrets.PUBLISH_PROFILE_PROD }}
     
    
       
